--- a/src/app/chatting/chatting.component.html
+++ b/src/app/chatting/chatting.component.html
@@ -1,198 +1,6 @@
 <!--https://www.youtube.com/watch?v=f8el0g_rXbY-->
-<div class="html">
-  <div class="body">
-    <div id="chat-container">
-      <div id="search-container">
-        <input type="text" placeholder="Search"/>
-      </div>
-
-      <div id="conversation-list">
-        <div class="conversation active">
-          <img src="../../assets/images/profil.png" alt="Daryl Duckmanton"/>
-
-          <div class="title-text">
-            Daryl Duckmanton
-          </div>
-
-          <div class="created-date">
-            17/10/2020 à 19:29
-          </div>
-
-          <div class="conversation-message">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsum, sed, sunt. Adipisci animi ducimus eius magnam min
-            ima nostrum, pariatur sed tempore voluptate? Commodi eaque ex
-            molestias odio pariatur quidem similique.
-          </div>
-        </div>
-
-        <div class="conversation">
-          <img src="../../assets/images/profil.png" alt="Daryl Duckmanton"/>
-
-          <div class="title-text">
-            Daryl Duckmanton
-          </div>
-
-          <div class="created-date">
-            17/10/2020 à 19:29
-          </div>
-
-          <div class="conversation-message">
-            This is a message Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsum, sed, sunt. Adipisci animi ducimus eius magnam min
-            ima nostrum, pariatur sed tempore voluptate? Commodi eaque ex
-            molestias odio pariatur quidem similique.
-          </div>
-        </div>
-
-        <div class="conversation">
-          <img src="../../assets/images/profil.png" alt="Daryl Duckmanton"/>
-
-          <div class="title-text">
-            Daryl Duckmanton
-          </div>
-
-          <div class="created-date">
-            17/10/2020 à 19:29
-          </div>
-
-          <div class="conversation-message">
-            This is a message Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsum, sed, sunt. Adipisci animi ducimus eius magnam min
-            ima nostrum, pariatur sed tempore voluptate? Commodi eaque ex
-            molestias odio pariatur quidem similique.
-          </div>
-        </div>
-
-        <div class="conversation">
-          <img src="../../assets/images/profil.png" alt="Daryl Duckmanton"/>
-
-          <div class="title-text">
-            Daryl Duckmanton
-          </div>
-
-          <div class="created-date">
-            17/10/2020 à 19:29
-          </div>
-
-          <div class="conversation-message">
-            This is a message Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsum, sed, sunt. Adipisci animi ducimus eius magnam min
-            ima nostrum, pariatur sed tempore voluptate? Commodi eaque ex
-            molestias odio pariatur quidem similique.
-          </div>
-        </div>
-
-        <div class="conversation">
-          <img src="../../assets/images/profil.png" alt="Daryl Duckmanton"/>
-
-          <div class="title-text">
-            Daryl Duckmanton
-          </div>
-
-          <div class="created-date">
-            17/10/2020 à 19:29
-          </div>
-
-          <div class="conversation-message">
-            This is a message Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsum, sed, sunt. Adipisci animi ducimus eius magnam min
-            ima nostrum, pariatur sed tempore voluptate? Commodi eaque ex
-            molestias odio pariatur quidem similique.
-          </div>
-        </div>
-
-        <div class="conversation">
-          <img src="../../assets/images/profil.png" alt="Daryl Duckmanton"/>
-
-          <div class="title-text">
-            Daryl Duckmanton
-          </div>
-
-          <div class="created-date">
-            9
-          </div>
-
-          <div class="conversation-message">
-            This is a message Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            Ipsum, sed, sunt. Adipisci animi ducimus eius magnam min
-            ima nostrum, pariatur sed tempore voluptate? Commodi eaque ex
-            molestias odio pariatur quidem similique.
-          </div>
-        </div>
-      </div>
-
-      <div id="new-message-container">
-        <a href="#">+</a>
-      </div>
-
-      <div id="chat-title">
-        <span>Daryl Duckmanton</span>
-        <img src="../../assets/images/trash.svg" alt="Delete conversation" />
-      </div>
-
-      <div id="chat-message-list">
-        <div class="message-row you-message">
-          <div class="message-text">Ok then</div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row other-message">
-          <div class="message-text">Lorem ipsum dolor sit ame
-            t, consectetur adipisicing elit. Ab aliquam cupiditate,
-            dignissimos doloribus earum error facilis illo inventore ipsa magni minima modi molestiae no
-            strum odit possimus quidem quis sit voluptatem!
-          </div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row other-message">
-          <div class="message-text">Ok then</div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row you-message">
-          <div class="message-text">Lorem ipsum dolor sit ame
-            t, consectetur adipisicing elit. Ab aliquam cupiditate,
-            dignissimos doloribus earum error facilis illo inventore ipsa magni minima modi molestiae no
-            strum odit possimus quidem quis sit voluptatem!
-          </div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row you-message">
-          <div class="message-text">Ok then</div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row other-message">
-          <div class="message-text">Lorem ipsum dolor sit ame
-            t, consectetur adipisicing elit. Ab aliquam cupiditate,
-            dignissimos doloribus earum error facilis illo inventore ipsa magni minima modi molestiae no
-            strum odit possimus quidem quis sit voluptatem!
-          </div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row other-message">
-          <div class="message-text">Ok then</div>
-          <div class="message-time">17:05</div>
-        </div>
-
-        <div class="message-row you-message">
-          <div class="message-text">Lorem ipsum dolor sit ame
-            t, consectetur adipisicing elit. Ab aliquam cupiditate,
-            dignissimos doloribus earum error facilis illo inventore ipsa magni minima modi molestiae no
-            strum odit possimus quidem quis sit voluptatem!
-          </div>
-          <div class="message-time">17:05</div>
-        </div>
-      </div>
-
-      <div id="chat-form">
-        <img src="../../assets/images/link.svg" alt="Add Attachement"/>
-        <textarea placeholder="Type a message"></textarea>
-      </div>
-    </div>
-  </div>
+<div class="mt-5">
+  <button class="btn btn-danger" (click)="open()">
+    Open chat modal
+  </button>
 </div>
